<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivity">

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:id="@+id/progressBar1" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:src="@drawable/ic_launcher_background"
        android:scaleType="fitXY"
        android:id="@+id/img_detail"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/img_detail"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        android:id="@+id/linear"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="16dp">


        <TextView
            android:id="@+id/tittle_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/judul_film_detail"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginLeft="16dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date_released"
            android:layout_below="@id/tittle_detail"
            android:layout_marginLeft="16dp"
            android:id="@+id/date_released_detail"
            android:layout_marginTop="16dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:layout_below="@id/date_released_detail"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="16dp"
            android:id="@+id/desc_detail"
            android:textSize="16sp"/>


    </RelativeLayout>

</RelativeLayout>